--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,14 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Claude Code
+.claude/
+
+# IDE / Editor
+.vscode/
+.idea/
+
+# OS
+Thumbs.db
+nul
